--- a/src/main/resources/templates/layout/header.html
+++ b/src/main/resources/templates/layout/header.html
@@ -1,5 +1,5 @@
 <header th:fragment="header" class="bg-gray-800 text-white py-4">
   <div class="container mx-auto text-center">
-    <h1 class="text-2xl font-bold">My Blog</h1>
+    <h1 class="text-2xl font-bold">ShareAndBook Medistream</h1>
   </div>
 </header>
